# cpp_run_n_gun

./: CMakeLists.txt
.github/workflows/: ci-cd.yml
resources/data/: Platforms.json  fg_sky.json  map.json  tiles_out.json
src/: Bullet.h  Enemy.h  Entity.h  Interface.h  Main.cpp  MovingPlatform.h  ParallaxBackground.h  Player.h  Settings.cpp  Settings.h  TiledMap.cpp  TiledMap.h
src/Core/: Animate.h  DrawUtils.h  EventQueue.cpp  EventQueue.h  Events.h  FloatRect.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Group.cpp  Group.h  RandomUtils.h
